test/bad/automatic/extension/mixed/compile_time/0003.lat
class janusz {
  int andrzej;
}

class zygmunt extends janusz {
  int krystyna;
}

int main() {
  janusz[] janusz = new zygmunt [20];
  return janusz[0].andrzej;
}
